--- a/css/styles.css
+++ b/css/styles.css
@@ -186,11 +186,25 @@ img {
     letter-spacing: 0.02em;
     padding-top: 8px;
 }
-.team-list {
+.team-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
+
+}
+.team-list-bloks {
+    display: flex;
+    gap: 24px;
+    width: calc((100% - 72px) / 4);
+    
 }
 .team-list-box {
     background-color: #FFFFFF;
+    display: block;
+    border-radius: 0px 0px 4px 4px;
+    
+}
+.box-name {
+    padding: 32px 0;
 }
 .team-title {
     color: #2E2F42;     
@@ -200,6 +214,8 @@ img {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
+    
 }
 .team-name {
     color: #2E2F42;
@@ -207,6 +223,7 @@ img {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
 
 }
 .team-text, .portfolio-text {
@@ -214,9 +231,10 @@ img {
     font-size: 16px;
     letter-spacing: 0.02em;
     line-height: 1.5;
+    text-align: center;
 }
-.portfolio-list {
-    
+.portfolio-section {
+    padding: 120px 0 120px 0;
 }
 .portfolio-title {
     color: #2E2F42;
@@ -225,10 +243,22 @@ img {
     text-align: center;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    text-transform: capitalize
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
 .portfolio-list-blocks {
     list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.portfolio-image {
+    object-fit: contain;
+}
+.portfolio-box {
+    width: calc((100% - 48px) / 3);
+    gap: 24px;
 }
 .portfolio-list-blocks-title {
     color: #2E2F42;
@@ -236,6 +266,14 @@ img {
     font-size: 20px;
     letter-spacing: 0.02em;
     line-height: 1.2;
+    margin-left: 16px;
+    padding-top: 32px;
+    margin-bottom: 8px;
+}
+.port-disscr {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 .foot {
     background-color: #2E2F42;
