--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,19 @@ body {
     color: #434455;
     background-color: #FFFFFF;
 }
-h1, h2, h3, p, ul {
+h1, h2, h3, p {
     margin-top: 0;
     margin-bottom: 0;
+}
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
 
 img {
     display: block;
+    
 }
 
 .container {
@@ -189,12 +195,15 @@ img {
 .team-section {
     background-color: #F4F4FD;
     padding: 120px 0;
+    justify-content: center;
+    margin-left: 0px;
+    margin-right: 0px;
 
 }
 .team-list-bloks {
     display: flex;
     gap: 24px;
-    width: calc((100% - 72px) / 4);
+    width: calc((100% - 40px) / 3);
     
 }
 .team-list-box {
@@ -245,6 +254,7 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
+
 }
 .portfolio-list-blocks {
     list-style-type: none;
@@ -252,14 +262,25 @@ img {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    padding-left: 156px;
+    padding-right: 156px;
+    justify-content: center; 
+    
 }
 .portfolio-image {
     object-fit: contain;
 }
 .portfolio-box {
     width: calc((100% - 48px) / 3);
-    gap: 24px;
+    width: 360px;
+    height: 420px;
+    
 }
+.portfolio-text {
+    text-align: left;
+    padding-left: 16px;
+}
+    
 .portfolio-list-blocks-title {
     color: #2E2F42;
     font-weight: 500;
@@ -268,15 +289,21 @@ img {
     line-height: 1.2;
     margin-left: 16px;
     padding-top: 32px;
-    margin-bottom: 8px;
+    text-align: left;
+    
 }
 .port-disscr {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+    width: 360px;
+    
+    
 }
 .foot {
     background-color: #2E2F42;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 .footer-text {
     color: #F4F4FD;
@@ -284,6 +311,8 @@ img {
     letter-spacing: 2%;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-top: 16px;
+    width: 264px;
   }
   .logo-foot {
     line-height: 1.17;
@@ -293,6 +322,8 @@ img {
     font-size: 18px;
     text-transform: uppercase;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
   }
   .span-logo-foot {
     color: #f4f4fd;
