--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: 156px;
 }
 
 .header .container {
@@ -58,7 +59,7 @@ img {
     color: #4d5ae5;
     padding-top: 24px;
     padding-bottom: 24px;
-    padding-left: 156px;
+    
     
   
 }
@@ -128,6 +129,7 @@ img {
     background-color: #2E2F42;
     padding-top: 188px;
     padding-bottom: 188px;
+    padding-left: 156px;
     
 }
 .head-title {
@@ -164,6 +166,7 @@ img {
 }
 .second-section {
     padding: 120px 0;
+    margin-left: 156px;
 }
 .visually-hidden {
     color: #FFFFFF;
@@ -201,6 +204,7 @@ img {
     justify-content: center;
     margin-left: 0px;
     margin-right: 0px;
+    padding-left: 156px;
 
 }
 .team-list-bloks {
@@ -209,6 +213,7 @@ img {
     width: calc((100% - 40px) / 3);
     
 }
+
 .team-list-box {
     background-color: #FFFFFF;
     display: block;
@@ -247,6 +252,7 @@ img {
 }
 .portfolio-section {
     padding: 120px 0 120px 0;
+    
 }
 .portfolio-title {
     color: #2E2F42;
@@ -257,7 +263,7 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
-
+    
 }
 .portfolio-list-blocks {
     list-style-type: none;
@@ -307,6 +313,7 @@ img {
     background-color: #2E2F42;
     padding-top: 100px;
     padding-bottom: 100px;
+    padding-left: 156px;
 }
 .footer-text {
     color: #F4F4FD;
