--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,8 @@ img {
     padding-right: 15px;
     margin-left: 0px;
     margin-right: 0px;
-    display: block;
     width: 1158px;
+    
 }
 
 .header {
@@ -200,7 +200,8 @@ img {
 }
 .team-section {
     background-color: #F4F4FD;
-    padding: 120px 0;
+    padding-top: 120px;
+    padding-bottom: 120px;
     justify-content: center;
     margin-left: 0px;
     margin-right: 0px;
@@ -210,8 +211,7 @@ img {
 .team-list-bloks {
     display: flex;
     gap: 24px;
-    width: calc((100% - 40px) / 3);
-    
+    width: calc((100% - 40px) / 3);   
 }
 
 .team-list-box {
@@ -252,6 +252,7 @@ img {
 }
 .portfolio-section {
     padding: 120px 0 120px 0;
+    justify-content: center;
     
 }
 .portfolio-title {
@@ -263,6 +264,8 @@ img {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 72px;
+    align-items: center;
+    
     
 }
 .portfolio-list-blocks {
@@ -271,7 +274,6 @@ img {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    padding-left: 156px;
     padding-right: 156px;
     justify-content: center; 
     
