--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ img {
     border-bottom: 1px solid #e7e9fc;
     justify-content: space-between;
     align-items: center;
+    margin-right: 76px;
 }    
 
 .header .container {
@@ -235,7 +236,7 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-align: center;
-
+    margin-bottom: 8px;
 }
 .team-text, .portfolio-text {
     color: #434455;
@@ -298,7 +299,7 @@ img {
     border: 1px solid #e7e9fc;
     border-top: none;
     width: 360px;
-    
+    margin-bottom: 8px;
     
 }
 .foot {
