--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ img {
     display: flex;
     gap: 40px;
     margin-left: 76px;
+    margin-right: 76px;
 } 
 .link {
     color: #2E2F42;
@@ -300,7 +301,6 @@ img {
     border-top: none;
     width: 360px;
     margin-bottom: 8px;
-    
 }
 .foot {
     background-color: #2E2F42;
