--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,7 @@ img {
     padding-top: 24px;
     padding-bottom: 24px;
     text-decoration: none;
-    
-  
+    margin-right: 76px;    
 }
 .logo:focus, .logo:active {
     color: #404bbf;
@@ -293,14 +292,14 @@ img {
     letter-spacing: 0.02em;
     line-height: 1.2;
     text-align: left;
-    
+    margin-right: 76px;
 }
 .port-disscr {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
     width: 360px;
-    margin-bottom: 8px;
+   
 }
 .foot {
     background-color: #2E2F42;
