--- a/css/styles.css
+++ b/css/styles.css
@@ -293,6 +293,7 @@ img {
     line-height: 1.2;
     text-align: left;
     margin-right: 76px;
+    margin-bottom: 8px;
 }
 .port-disscr {
     padding: 32px 16px;
